<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvr_pi_4</name>
  <version>0.0.0</version>
  <description>A package to control the RVR with a Raspberry Pi 4 over ROS2 Framework</description>
  <maintainer email="as.spackman25@gmail.com">BoofRemaster</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sphero_sdk</depend>
  <depend>asyncio</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
